<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nouveau_sport"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.iutlan.sportable.NouveauSport">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:id="@+id/linearLayout">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout_sport_nom">

            <EditText
                android:id="@+id/sport_nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sport_nom"
                android:layout_marginBottom="20dp"
                android:layout_alignParentTop="true"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:layout_alignParentStart="true"/>

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/textInputLayout_sport_description">
            <EditText
                android:id="@+id/sport_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sport_description"
                android:layout_marginBottom="20dp"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:layout_below="@+id/sport_couleur"
                android:layout_alignParentStart="true"/>
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/textInputLayout_sport_couleur">
            <EditText
                android:id="@+id/sport_couleur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sport_couleur"
                android:layout_marginBottom="20dp"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:layout_above="@+id/textInputLayout_date"
                android:layout_alignParentStart="true"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true">

        <ImageButton
            android:id="@+id/ib_validationNouveauSport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            app:srcCompat="@drawable/ic_add_white_24dp" />

        <ImageButton
            android:id="@+id/ib_cancelNouveauSport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            app:srcCompat="@drawable/ic_clear_white_24dp" />

    </LinearLayout>


</RelativeLayout>
